--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Discover Localzz</string>
     <string name="title_discover">Entdecken</string>
     <string name="title_map">Karte</string>
-    <string name="title_tickets">Tickets</string>
+    <string name="title_coupons">Gutscheine</string>
     <string name="title_event">Event</string>
     <string name="title_ticket">Ticket</string>
     <string name="title_booking">Buchen</string>
