--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="my_data">Meine Daten</string>
     <string name="my_interests">Meine Interessen</string>
+    <string name="my_reviews">Meine Bewertungen</string>>
     <string name="payment_details">Zahlungsdetails</string>
     <string name="coupons_history">eingelöste Gutscheine</string>
     <string name="imprint">Impressum</string>
@@ -113,6 +114,6 @@
     <string name="currency_format">%1$s €</string>
     <string name="vat_format">%1$s inkl. MwSt.</string>
     <string name="summary_format">%1$s</string>
-    <string name="start_format">%1$s um %2$s Uhr</string>
+    <string name="start_format">%1$s am %2$s</string>
     <string name="address_format">%1$s %2$s, %3$s %4$s</string>
 </resources>
