--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="title_coupons">Gutscheine</string>
     <string name="title_location">Location</string>
     <string name="title_coupon">Rabatt</string>
-    <string name="title_booking">Buchen</string>
     <string name="title_interests">Interessen</string>
     <string name="title_register">Registrieren</string>
     <string name="title_login">Anmelden</string>
@@ -42,21 +41,11 @@
     <string name="cancel">Abbrechen</string>
     <string name="ok">OK</string>
 
-<!--    TODO-->
-    <string name="booking_title">Titel des Locations</string>
-    <string name="booking_payment">Zahlungsmethode</string>
-    <string name="booking_payment_card_number">••••%1$s</string>
-    <string name="booking_payment_missing">Keine Zahlungsmethode</string>
-    <string name="booking_payment_missing_message">Sie müssen eine Zahlungsmethode hinterlegen, um ein Ticket buchen zu können.</string>
-    <string name="booking_info">Eine ausführliche Rechnung und das Ticket bekommst du im Anschluss per Mail zugesandt. Das Ticket ist auch jeder Zeit in der App abrufbar.</string>
-    <string name="booking_fab">Kostenpflichtig bestellen</string>
-
     <string name="description">Beschreibung</string>
     <string name="organizer">Veranstalter</string>
     <string name="when">Wann?</string>
     <string name="available_until">Gültig bis</string>
     <string name="where">Wo?</string>
-    <string name="what">Was?</string>
     <string name="coupon_info">Zeige diesen Code beim Einlass vor</string>
     <string name="coupon_cancel">Stornierung anfordern</string>
     <string name="ratings_title">Bewertungen</string>
@@ -79,8 +68,6 @@
 
 <!--    TODO-->
     <string name="share">Teilen</string>
-    <string name="google_login">Mit Google fortfahren</string>
-    <string name="facebook_login">Mit Facebook fortfahren</string>
     <string name="guest_login">Als Gast fortfahren</string>
     <string name="register">Kein Account? Jetzt registrieren</string>
     <string name="reset_password">Passwort vergessen?</string>
@@ -91,7 +78,6 @@
     <string name="dummy_database">Dummy-Einträge</string>
     <string name="dummy_database_summary">Die Dummy-Datenbank wurde erfolgreich erstellt. Um auf die befüllte Datenbank zuzugreifen, ist es erforderlich, die Aktivität neu zu starten.</string>
     <string name="login_error">Ungültige Email/Handynummer oder Passwort</string>
-    <string name="booking_login_required">Sie müssen angemeldet sein, um ein Ticket buchen zu können.</string>
     <string name="calendar_error">"Es ist keine Kalender-App installiert."</string>
 
     <string name="cancellation">Stornieren</string>
@@ -118,4 +104,7 @@
     <string name="summary_format">%1$s</string>
     <string name="start_format">%1$s am %2$s</string>
     <string name="address_format">%1$s %2$s, %3$s %4$s</string>
+    <string name="search_empty_message">Keine Ergebnisse gefunden. Bitte überprüfen Sie die Adresse.</string>
+    <string name="location_not_found">Standort nicht gefunden. Bitte überprüfen Sie die Eingabe.</string>
+    <string name="search_error">Fehler bei der Suche. Bitte versuchen Sie es später erneut.</string>
 </resources>
